# anyllm

./: AGENTS.md  Cargo.toml  README.md  deny.toml  devenv.nix
.github/workflows/: ci.yaml  e2e.yaml  examples.yaml
anyllm/: Cargo.toml  README.md
anyllm/benches/: stream_collect.rs
anyllm/examples/: dyn_provider.rs  extract.rs  extractor.rs  fallback.rs  provider_impl.rs  records.rs  retry.rs  tool_calling.rs  validation.rs
anyllm/src/: chat.rs  error.rs  fallback.rs  lib.rs  message.rs  mock.rs  retry.rs  tracing.rs  usage.rs  utils.rs  validation.rs
anyllm/tests/: compat_error.rs  compat_message.rs  compat_request_response.rs  compat_stream.rs  tracing_tests.rs
crates/anyllm/: Cargo.toml  README.md
crates/anyllm-anthropic/: Cargo.toml  README.md  models-dev.json
crates/anyllm-anthropic/benches/: streaming.rs
crates/anyllm-anthropic/fixtures/: error_auth.json  error_context_length.json  error_model_not_found.json  error_rate_limited.json  error_timeout.json  request.json  response_expected.json  response_raw.json  stream.sse  stream_events.json  stream_response_expected.json  stream_truncated.sse  stream_truncated_error.json  stream_truncated_events.json  stream_truncated_response_expected.json
crates/anyllm-anthropic/src/: cache_control.rs  chat.rs  conformance_tests.rs  error.rs  lib.rs  options.rs  streaming.rs  wire.rs
crates/anyllm-anthropic/tests/: e2e.rs  http_integration.rs
crates/anyllm-cloudflare-worker/: Cargo.toml  README.md
crates/anyllm-cloudflare-worker/fixtures/: error_auth.json  error_content_filtered.json  error_context_length.json  error_model_not_found.json  error_rate_limited.json  error_timeout.json  request.json  response_expected.json  response_json_expected.json  response_json_raw.json  response_raw.json  response_tools_expected.json  response_tools_raw.json  stream.sse  stream_events.json  stream_response_expected.json  stream_truncated.sse  stream_truncated_completeness.json  stream_truncated_error.json  stream_truncated_events.json
crates/anyllm-cloudflare-worker/src/: chat.rs  conformance_tests.rs  embedding.rs  error.rs  lib.rs  streaming.rs  wire.rs
crates/anyllm-conformance/: Cargo.toml  README.md
crates/anyllm-conformance/src/: contract.rs  e2e.rs  http_test_server.rs  lib.rs
crates/anyllm-examples/: Cargo.toml  README.md
crates/anyllm-examples/examples/: anthropic_prompt_caching.rs  cross_provider_fallback.rs  provider_chat.rs  provider_embedding.rs  provider_extract.rs  provider_parallel_tools.rs  provider_reasoning.rs  provider_stream.rs  provider_streaming_tools.rs  provider_tools.rs  provider_vision.rs  record_replay.rs
crates/anyllm-examples/src/: lib.rs
crates/anyllm-examples/tests/: live_cloudflare_worker.rs  live_providers.rs  providers.rs  support.rs
crates/anyllm-examples/tests/support/: mod.rs
crates/anyllm-gemini/: Cargo.toml  README.md  models-dev.json
crates/anyllm-gemini/benches/: streaming.rs
crates/anyllm-gemini/fixtures/: embed_error_context_length.json  embed_error_model_not_found.json  embed_error_rate_limited.json  embed_request.json  embed_response_expected.json  embed_response_raw.json  error_auth.json  error_context_length.json  error_model_not_found.json  error_rate_limited.json  request.json  response_expected.json  response_raw.json  stream.sse  stream_events.json  stream_response_expected.json  stream_truncated.sse  stream_truncated_completeness.json  stream_truncated_error.json  stream_truncated_events.json  stream_truncated_response_expected.json
crates/anyllm-gemini/src/: chat.rs  conformance_tests.rs  embedding.rs  error.rs  lib.rs  options.rs  streaming.rs  wire.rs
crates/anyllm-gemini/tests/: e2e.rs  http_integration.rs
crates/anyllm-models/: Cargo.toml
crates/anyllm-models/src/: fetch.rs  lib.rs  model.rs  provider.rs  resolver.rs
crates/anyllm-models/tests/: deserialize.rs  fetch.rs  live_schema.rs
crates/anyllm-models/tests/fixtures/: api.json
crates/anyllm-openai/: Cargo.toml  README.md  models-dev.json
crates/anyllm-openai-compat/: Cargo.toml  README.md
crates/anyllm-openai-compat/benches/: normalization.rs
crates/anyllm-openai-compat/src/: chat.rs  embedding.rs  error.rs  lib.rs  options.rs  providers.rs  streaming.rs  wire.rs
crates/anyllm-openai-compat/src/providers/: cloudflare.rs
crates/anyllm-openai-compat/tests/: e2e.rs  e2e_cloudflare.rs  embedding_integration.rs  reuse_end_to_end.rs
crates/anyllm-openai/benches/: streaming.rs
crates/anyllm-openai/fixtures/: embed_error_auth.json  embed_error_context_length.json  embed_error_model_not_found.json  embed_error_rate_limited.json  embed_request.json  embed_response_expected.json  embed_response_raw.json  error_context_length.json  error_model_not_found.json  request.json  response_expected.json  response_raw.json  stream.sse  stream_events.json  stream_response_expected.json  stream_truncated.sse  stream_truncated_completeness.json  stream_truncated_events.json  stream_truncated_response_expected.json
crates/anyllm-openai/src/: chat.rs  conformance_tests.rs  embedding.rs  error.rs  lib.rs  options.rs  streaming.rs  wire.rs
crates/anyllm-openai/tests/: e2e.rs  http_integration.rs
crates/anyllm/examples/: chat.rs  dyn_provider.rs  embedding.rs  provider_impl.rs  stream.rs  tool_calling.rs  tracing.rs
crates/anyllm/src/: capability.rs  chat.rs  content.rs  embedding.rs  error.rs  extract.rs  identity.rs  lib.rs  mock.rs  options.rs  stream.rs  tool.rs
crates/anyllm/src/chat/: content.rs  extract.rs  fallback.rs  message.rs  mock.rs  provider.rs  request.rs  response.rs  retry.rs  stream.rs  system.rs  tracing.rs
crates/anyllm/src/embedding/: mock.rs  provider.rs  request.rs  response.rs
crates/anyllm/tests/: compat_content.rs  compat_message.rs  compat_tool.rs  embedding_prelude.rs  tracing_tests.rs
issues/: 35-models-dev-capability-resolver.md
scripts/: update-models-dev-snapshots.sh
