[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2024"
rust-version = "1.92"
license = "MIT"
repository = "https://github.com/sagikazarmark/anyllm"
homepage = "https://github.com/sagikazarmark/anyllm"
keywords = ["llm", "chat", "streaming"]
categories = ["api-bindings", "artificial-intelligence"]

[workspace.dependencies]
anyllm = { version = "0.1.1", path = "crates/anyllm" }
anyllm-conformance = { path = "crates/anyllm-conformance" }
anyllm-openai-compat = { version = "0.1.1", path = "crates/anyllm-openai-compat", default-features = false }
criterion = "0.8"
eventsource-stream = "0.2"
futures-core = "0.3"
futures-executor = "0.3"
futures-util = "0.3"
reqwest = { version = "0.13", default-features = false, features = ["json", "stream"] }
reqwest-middleware = "0.5"
reqwest-tracing = "0.7"
schemars = "1.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = "1"

[workspace.metadata.release]
sign-commit = true
sign-tag = true
tag-message = "Release {{version}}"
tag-prefix = ""
