[package]
name = "anyllm-conformance"
description = "Fixture-based conformance helpers for anyllm provider adapters"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
publish = false
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
anyllm = { workspace = true }
axum = "0.8"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["net", "rt", "sync"] }
