[package]
name = "anyllm-conformance"
description = "Fixture-based conformance helpers for anyllm provider adapters"
publish = false
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
anyllm = { workspace = true }
axum = "0.8"
futures-core = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["net", "rt", "sync"] }
