[package]
name = "anyllm-examples"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
description = "Runnable examples and live tests for anyllm providers"
publish = false

[dependencies]
anyllm = { path = "../anyllm", features = ["extract"] }
anyllm-anthropic = { path = "../anyllm-anthropic" }
anyllm-gemini = { path = "../anyllm-gemini" }
anyllm-openai = { path = "../anyllm-openai" }
schemars = "1.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }
