[package]
name = "anyllm-openai-compat"
description = "Reusable OpenAI-compatible transport and normalization toolkit for anyllm providers"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
anyllm = { workspace = true }
eventsource-stream = { workspace = true }
futures-core = { workspace = true }
futures-util = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
anyllm-conformance = { workspace = true }
criterion = { workspace = true }
tokio = { workspace = true, features = ["macros"] }

[features]
default = ["reqwest/default-tls"]
extract = ["anyllm/extract"]

[package.metadata.docs.rs]
all-features = true

[[bench]]
name = "normalization"
harness = false
