[package]
name = "anyllm-openai"
description = "OpenAI provider for anyllm"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
anyllm = { workspace = true }
anyllm-openai-compat = { version = "0.0.1", path = "../anyllm-openai-compat" }
eventsource-stream = "0.2"
futures = "0.3"
reqwest = { version = "0.13", default-features = false, features = ["json", "stream", "rustls"] }
reqwest-middleware = { version = "0.5", optional = true }
reqwest-tracing = { version = "0.7", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
anyllm-conformance = { workspace = true }
criterion = { version = "0.5", features = ["html_reports"] }
tokio = { version = "1", features = ["full", "test-util"] }

[features]
default = ["extract"]
extract = ["anyllm/extract"]
http-tracing = ["dep:reqwest-middleware", "dep:reqwest-tracing"]
bench-internals = []

[package.metadata.docs.rs]
all-features = true

[[bench]]
name = "streaming"
harness = false
required-features = ["bench-internals"]
