[package]
name = "anyllm"
description = "Low-level, generic LLM provider abstraction for Rust"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
erased-serde = "0.4"
futures-core = { workspace = true }
futures-timer = "3.0"
futures-util = { workspace = true }
schemars = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true, features = ["raw_value"] }
tracing = { version = "0.1", optional = true }

[dev-dependencies]
criterion = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "0.3"

[features]
extract = ["dep:schemars"]
mock = []
tracing = ["dep:tracing"]

[package.metadata.docs.rs]
all-features = true

[[example]]
name = "dyn_provider"

[[example]]
name = "provider_impl"

[[example]]
name = "chat"
required-features = ["mock"]

[[example]]
name = "stream"
required-features = ["mock"]

[[example]]
name = "tool_calling"
required-features = ["mock"]

[[example]]
name = "retry"
required-features = ["mock"]

[[example]]
name = "fallback"
required-features = ["mock"]

[[example]]
name = "records"
required-features = ["mock"]

[[example]]
name = "extract"
required-features = ["mock", "extract"]

[[example]]
name = "tracing"
required-features = ["mock", "tracing"]

[[example]]
name = "extractor"
required-features = ["mock", "extract"]

[[bench]]
name = "stream_collect"
harness = false
